--- a/ansible/nginx.yml
+++ b/ansible/nginx.yml
@@ -11,7 +11,7 @@
         update_cache: yes
 
     - name: copy nginx config file
-      copy: src=nginx-files/nginx.conf dest=/etc/nginx/sites-available/default
+      copy: src=../config/nginx.conf dest=/etc/nginx/sites-available/default
 
     - name: enable configuration
       file: >
@@ -20,7 +20,7 @@
         state=link
 
     - name: copy index.html
-      template: src=templates/index.html.j2 dest=/var/www/html/index.html mode=0644
+      template: src=../config/index.html.j2 dest=/var/www/html/index.html mode=0644
 
     - name: Write text 1
       shell: echo 'Welcome to web server '$(hostname | cut -d '.' -f 1 ) > /var/www/html/index.html
