--- a/ansible/nginxlog-exporter.yml
+++ b/ansible/nginxlog-exporter.yml
@@ -14,10 +14,12 @@
         enable: false
       namespaces:
         - name: nginx
-          format: "$remote_addr - $remote_user [$time_local] \"$request\" $status $body_bytes_sent \"$http_referer\" \"$http_user_agent\" \"$http_x_forwarded_for\""
+         #format: "$remote_addr - $remote_user [$time_local] \"$request\" $status $body_bytes_sent \"$http_referer\" \"$http_user_agent\" \"$http_x_forwarded_for\""
+          format: "$remote_addr -$remote_user- [$time_local] \"$request\" $status $body_bytes_sent \"$http_referer\" \"$http_user_agent\"" 
           source:
             files:
               - "/var/log/nginx/access.log"
+              - "/var/log/nginx/error.log"
           histogram_buckets: [.005, .01, .025, .05, .1, .25, .5, 1, 2.5, 5, 10]
 
   tasks:
